--- a/DW/9-CSSGrid-Basico/proyecto/style.css
+++ b/DW/9-CSSGrid-Basico/proyecto/style.css
@@ -10,7 +10,7 @@ main {
 .hero {
     display: grid;
     grid-template-columns: 2fr 3fr;
-    grid-auto-rows: 400px;
+    grid-auto-rows: 550px;
     border-bottom: 1px solid #ddd;
 }
 
@@ -75,4 +75,38 @@ main {
 
 .dishes-item__big {
     grid-area: 1 / 1 / 3 / 3;
+}
+
+
+
+.menu {
+    margin-bottom: 200px;
+}
+
+
+.menu-title {
+    font-size: 2rem;
+    color: #333;
+    font-weight: bolder;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.menu-grid {
+    display: grid;
+    gap: 25px;
+    justify-content: center;
+    grid-template-columns: repeat(5, minmax(100px, 250px));
+}
+
+.menu-grid-item {
+    background-color: #dd5228;
+    padding: 15px;
+    border-radius: 40px 0 0 0;
+}
+
+.menu-grid-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
