--- a/DW/1-basico/projects/eco-store-platzi/scss/main.scss
+++ b/DW/1-basico/projects/eco-store-platzi/scss/main.scss
@@ -78,6 +78,9 @@ article {
         color: white;
         font-size: 1em;
         border: none;
+        &:hover {
+            transform: scale(1.1);
+        }
     }
 
     img {
@@ -162,10 +165,84 @@ section {
     }
 }
 
+.about-us {
+    padding-bottom: 60px;
+    h2 {
+        font-weight: bold;
+        padding-bottom: 60px;   
+    }
+    .mission-section {
+        @include flexCenter(row, space-evenly, center);
+        .earth {
+            $text-color: #E86424;
+            width: 30vw;
+            display: flex;
+            gap: 40px;
+            color: $text-color;
+            img {
+                object-fit: contain;
+            }
+
+            p {
+                text-align: center;
+                font-size: $paragraph-size;
+            }
+        }
+    }
+    .inovation {
+        @extend .earth;
+    }
+}
+
+.gallery {
+    h2 {
+        font-weight: bold;
+        padding-bottom: 60px;   
+    }
+    .gallery-images {
+        @include flexCenter(row, space-between, center);
+        img {
+            width: 28vw;
+            height: 45vh;
+            object-fit: conver;
+            object-position: 5px 35%;
+            border-radius: 16px;
+            &:hover {
+                transform: scale(1.1);
+                transition-duration: 0.3s;
+                // animation: aumento 10s ease-in-out infinite 20s;
+            }
+        }
+    }
+}
+
+.location {
+    $text-color: #E86424;
+    color: $text-color;
+    h2 {
+        padding-bottom: 60px;
+        padding-top: 60px;
+    }
+    .map {
+        @include flexCenter(row, center, center);
+        padding-bottom: 50px;
+    }
+    h3, p {
+        font-size: $paragraph-size;
+    }
+}
+
 footer {
     background-color: $quaternary-color;
     width: 100%;
-    height: 250px;
+    height: auto;
+    padding: 40px;
+    color: white;
+    .social-media {
+        @include flexCenter(row, center, center);
+        gap: 40px;
+        padding-bottom: 40px;
+    }
 }
 
 
