--- a/DW/2-intermedio/14.api-rest-js-fundamentos/resources/code/practice/styles.css
+++ b/DW/2-intermedio/14.api-rest-js-fundamentos/resources/code/practice/styles.css
@@ -20,20 +20,23 @@ main {
 }
 
 section.container {
-  width: 80vw;
-  height: 40vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
 }
 
 .random-cats {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  /* width: 100%;
+  height: 100%; */
 
   position: relative;
 }
 
 .cat-image {
   width: 100%;
+  max-width: 300px;
   height: 100%;
+  max-height: 300px;
 }
 
 .like-button {
@@ -43,7 +46,7 @@ section.container {
 
   position: absolute;
   top: 5px;
-  right: 300px;
+  right: 0;
 }
 
 .random-button {
